<resources>
    <string name="app_name">USC Rec App</string>
    <string name="title_home">Home</string>
    <string name="title_reservation">Reservation</string>
    <string name="title_notifications">Summary</string>
    <string name="db_username">root</string>
    <string name="db_password">Matthewwilson033!</string>
</resources>